Add jlink runtime image